# pythonprac

./: README.md  class.py  firstcommit.py  git_key  git_key.pub  ps_tv.txt  python-test  urlCreator.py
2/: prog.py
20210916/1/: prog.py
20210916/2/: failprog.py  prog.py
20210916/3/: gentest.py  prog.py
20210923/1/: URLS  prog.py
20210923/2/: URLS  prog.py
20210923/3/: URLS  prog.py
20210930/1/: URLS  prog.py
20210930/2/: prog.py
20210930/3/: prog.py
20211007/1/: URLS  prog.py
20211007/2/: URLS  prog.py
20211007/3/: URLS  prog.py
20211007/4/: URLS  prog.py
20211014/1/: URLS  prog.py
20211014/2/: URLS  prog.py
20211014/3/: URLS  prog.py
20211021/1/: URLS  prog.py
20211021/2/: URLS  prog.py
20211021/3/: URLS  prog.py
20211028/1/: URLS  prog.py
20211028/2/: URLS  prog.py
20211028/3/: prog.py
20211111/1/: URLS  prog.py
20211111/2/: URLS  prog.py
20211118/1/: URLS  prog.py
20211118/2/: URLS  prog.py
20211118/3/: URLS  prog.py
20211125/1/: prog.py
20211125/2/: prog.py
20211125/3/: URLS  prog.py
20211202/: prog.py
20211202/1/: URLS  prog.py
20211202/2/: URLS  prog.py
20211213/1/: URLS  prog.py
20211213/2/: URLS  prog.py
20220214/1/: prog.py
20220214/2/: prog.py
20220221/1/: fipsedixit.py  prog.py
20220221/2/: jabber.txt
20220411/: prog.py
20220425/1/: base.pot  dodo.py  prog.py  pyproject.toml  setup.cfg  test_prog.py
20220425/1/locale/: base.pot
20220425/1/locale/el_GR/LC_MESSAGES/: messages.mo  messages.po
20220425/1/po/ru/LC_MESSAGES/: messages.mo  messages.po
20220516/: base.pot  dodo.py
(+170 files in other folders)
