[metadata]
version = 0.0.1
name = 111
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
  pyfiglet

[options.packages.find]
where = .
